--- a/notebooks/ml/Distributed_Training/mirrored_strategy/mirroredstrategy_mnist_example.ipynb
+++ b/notebooks/ml/Distributed_Training/mirrored_strategy/mirroredstrategy_mnist_example.ipynb
@@ -94,7 +94,7 @@
      "data": {
       "text/html": [
        "<table>\n",
-       "<tr><th>ID</th><th>YARN Application ID</th><th>Kind</th><th>State</th><th>Spark UI</th><th>Driver log</th></tr><tr><td>15</td><td>application_1586507110993_0016</td><td>pyspark</td><td>idle</td><td><a target=\"_blank\" href=\"http://gpu.c.dpe-cloud-mle.internal:8088/proxy/application_1586507110993_0016/\">Link</a></td><td><a target=\"_blank\" href=\"http://gpu.c.dpe-cloud-mle.internal:8042/node/containerlogs/container_e01_1586507110993_0016_01_000001/demo_deep_learning_admin000__meb10000\">Link</a></td></tr></table>"
+       "<tr><th>ID</th><th>YARN Application ID</th><th>Kind</th><th>State</th><th>Spark UI</th><th>Driver log</th></tr><tr><td>65</td><td>application_1594231828166_0152</td><td>pyspark</td><td>idle</td><td><a target=\"_blank\" href=\"http://resourcemanager.service.consul:8088/proxy/application_1594231828166_0152/\">Link</a></td><td><a target=\"_blank\" href=\"http://sn021.dli.zenuity.com:8042/node/containerlogs/container_e08_1594231828166_0152_01_000001/demo__davit000\">Link</a></td></tr></table>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -107,25 +107,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "SparkSession available as 'spark'.\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Could not create experiment (url: /hopsworks-api/api/project/119/experiments/application_1586507110993_0016_1?xattr=REPLACE), server response: \n",
-      " HTTP code: 401, HTTP reason: Unauthorized, error code: 200003, error msg: The Token has expired on Sat Apr 11 22:35:15 UTC 2020., user msg: \n",
-      "Traceback (most recent call last):\n",
-      "  File \"/srv/hops/anaconda/anaconda/envs/demo_deep_learning_admin000/lib/python3.6/site-packages/hops/experiment.py\", line 594, in mirrored\n",
-      "    experiment_utils._finalize_experiment(experiment_json, None, app_id, run_id, 'FINISHED', duration, logdir, None, None)\n",
-      "  File \"/srv/hops/anaconda/anaconda/envs/demo_deep_learning_admin000/lib/python3.6/site-packages/hops/experiment_impl/util/experiment_utils.py\", line 689, in _finalize_experiment\n",
-      "    _attach_experiment_xattr(app_id, run_id, experiment_json, 'REPLACE')\n",
-      "  File \"/srv/hops/anaconda/anaconda/envs/demo_deep_learning_admin000/lib/python3.6/site-packages/hops/experiment_impl/util/experiment_utils.py\", line 461, in _attach_experiment_xattr\n",
-      "    resource_url, response.status_code, response.reason, error_code, error_msg, user_msg))\n",
-      "hops.exceptions.RestAPIError: Could not create experiment (url: /hopsworks-api/api/project/119/experiments/application_1586507110993_0016_1?xattr=REPLACE), server response: \n",
-      " HTTP code: 401, HTTP reason: Unauthorized, error code: 200003, error msg: The Token has expired on Sat Apr 11 22:35:15 UTC 2020., user msg: \n",
-      "\n"
+      "SparkSession available as 'spark'.\n",
+      "Finished Experiment \n",
+      "\n",
+      "('hdfs://rpc.namenode.service.consul:8020/Projects/demo/Experiments/application_1594231828166_0152_1', {'metric': None, 'log': 'Experiments/application_1594231828166_0152_1/chief_0_output.log'})"
      ]
     }
    ],
@@ -143,127 +128,112 @@
     "    \n",
     "    import pydoop.hdfs as pydoop\n",
     "    \n",
-    "    data_dir = hdfs.project_path()\n",
-    "    train_filenames = pydoop.path.abspath(data_dir + \"TourData/mnist/train/df-mnist_train.tfrecord\")\n",
-    "    train_filenames = tf.io.gfile.glob(train_filenames + \"/part-r-*\")\n",
-    "    validation_filenames = pydoop.path.abspath(data_dir + \"TourData/mnist/validation/df-mnist_test.tfrecord\")\n",
-    "    validation_filenames = tf.io.gfile.glob(validation_filenames + \"/part-r-*\")\n",
-    "    \n",
+    "    log_dir = tensorboard.logdir()\n",
     "    \n",
     "    # Define distribution strategy\n",
     "    strategy = tf.distribute.MirroredStrategy()\n",
     "\n",
-    "    epochs=30 \n",
-    "    steps_per_epoch=5\n",
-    "    validation_steps=2          \n",
-    "    \n",
+    "    # Define per device batch size\n",
     "    batch_size_per_replica = 32\n",
-    "    batch_size = batch_size_per_replica * strategy.num_replicas_in_sync\n",
-    "    shuffle_size = batch_size * 4\n",
     "    \n",
-    "    num_classes = 10\n",
-    "    kernel = 3\n",
+    "    # Define global batch size\n",
+    "    batch_size = batch_size_per_replica * strategy.num_replicas_in_sync\n",
+    "        \n",
+    "    # Define model hyper parameters\n",
+    "    epochs = 10\n",
+    "    steps_per_epoch = 5\n",
+    "    validation_steps = 2\n",
+    "    \n",
+    "    kernel = 2\n",
     "    pool = 2\n",
-    "    dropout = 0.5    \n",
+    "    dropout = 0.01\n",
     "\n",
+    "    num_classes = 10\n",
     "    \n",
     "    # Input image dimensions\n",
     "    img_rows, img_cols = 28, 28\n",
-    "    input_shape = (img_rows, img_cols, 1)\n",
-    "\n",
-    "    def input_fn(filenames, batch_size):\n",
-    "      \n",
+    "    input_shape = (28, 28, 1)\n",
     "    \n",
-    "      def _parser(serialized_example):\n",
+    "    \n",
+    "    train_filenames = [hdfs.project_path() + \"TourData/mnist/train/train.tfrecords\"]\n",
+    "    validation_filenames = [hdfs.project_path() + \"TourData/mnist/validation/validation.tfrecords\"]\n",
+    "    \n",
+    "    # Create an iterator over the dataset\n",
+    "    def data_input(filenames, batch_size=128, shuffle=False, repeat=None):\n",
+    "\n",
+    "        def parser(serialized_example):\n",
     "            \"\"\"Parses a single tf.Example into image and label tensors.\"\"\"\n",
     "            features = tf.io.parse_single_example(\n",
     "                serialized_example,\n",
     "                features={\n",
-    "                    'image_raw': tf.io.FixedLenFeature([img_rows * img_cols], tf.float32),                    \n",
+    "                    'image_raw': tf.io.FixedLenFeature([], tf.string),\n",
     "                    'label': tf.io.FixedLenFeature([], tf.int64),\n",
     "                })\n",
+    "            image = tf.io.decode_raw(features['image_raw'], tf.uint8)\n",
+    "            image.set_shape([28 * 28])\n",
+    "\n",
+    "            # Normalize the values of the image from the range [0, 255] to [-0.5, 0.5]\n",
+    "            image = tf.cast(image, tf.float32) / 255 - 0.5\n",
+    "            label = tf.cast(features['label'], tf.int32)\n",
+    "            # Reshape the tensor\n",
+    "            image = tf.reshape(image, [img_rows, img_cols, 1])\n",
+    "    \n",
+    "            # Create a one hot array for your labels\n",
+    "            label = tf.one_hot(label, num_classes)\n",
     "            \n",
-    "            image = features['image_raw']\n",
-    "            label = features['label']   \n",
-    "                \n",
-    "            return image, label\n",
-    "      \n",
-    "    \n",
-    "      def _normalize_img(image, label):\n",
-    "            \"\"\"Normalizes images\"\"\"\n",
-    "            image = tf.cast(image, tf.float32) / 255\n",
-    "            label = tf.cast(label, tf.int32)        \n",
     "            return image, label\n",
     "\n",
-    "      def _reshape_img(image, label):\n",
-    "        image = tf.reshape(image, [28, 28, 1])\n",
-    "        # label = tf.one_hot(label, num_classes)\n",
-    "        return image, label\n",
-    "        \n",
-    "        \n",
-    "      # Import MNIST data\n",
-    "      dataset = tf.data.TFRecordDataset(filenames)\n",
-    "        \n",
-    "      # Map the parser over dataset, and batch results by up to batch_size\n",
-    "      dataset = dataset.map(_parser, num_parallel_calls=tf.data.experimental.AUTOTUNE)\n",
-    "        \n",
-    "      dataset = dataset.map(\n",
-    "        _normalize_img, num_parallel_calls=tf.data.experimental.AUTOTUNE)\n",
+    "        # Import MNIST data\n",
+    "        dataset = tf.data.TFRecordDataset(filenames)\n",
     "\n",
-    "        \n",
-    "      dataset = dataset.map(\n",
-    "        _reshape_img, num_parallel_calls=tf.data.experimental.AUTOTUNE)\n",
-    "        \n",
-    "      dataset = dataset.repeat(epochs * steps_per_epoch)\n",
-    "      dataset = dataset.cache()\n",
-    "      dataset = dataset.shuffle(shuffle_size)\n",
-    "      dataset = dataset.batch(batch_size)   \n",
-    "  \n",
-    "      dataset = dataset.prefetch(tf.data.experimental.AUTOTUNE)\n",
-    "\n",
-    "      return dataset\n",
+    "        # Map the parser over dataset, and batch results by up to batch_size\n",
+    "        dataset = dataset.map(parser)\n",
+    "        if shuffle:\n",
+    "            dataset = dataset.shuffle(buffer_size=128)\n",
+    "        dataset = dataset.batch(batch_size, drop_remainder=True)\n",
+    "        dataset = dataset.repeat(repeat)\n",
+    "        return dataset\n",
     "    \n",
-    "    model_dir = tensorboard.logdir()\n",
-    "    print('Using %s to store checkpoints.' % model_dir)\n",
-    "\n",
+    "    # construct model under distribution strategy scope\n",
     "    with strategy.scope():\n",
-    "        # Model building/compiling need to be within `strategy.scope()`.\n",
-    "        # Define a Keras Model.    \n",
+    "        \n",
     "        model = tf.keras.Sequential()\n",
-    "        model.add(tf.keras.layers.Conv2D(32, kernel_size=(kernel, kernel), padding='same',\n",
-    "                            activation='relu',\n",
-    "                             input_shape=input_shape))\n",
-    "        model.add(tf.keras.layers.Conv2D(64, (kernel, kernel),  padding='same',activation='relu'))\n",
+    "        model.add(tf.keras.layers.Conv2D(32, kernel_size=(kernel, kernel),\n",
+    "                         activation='relu',\n",
+    "                         input_shape=input_shape))\n",
+    "        model.add(tf.keras.layers.Conv2D(64, (kernel, kernel), activation='relu'))\n",
     "        model.add(tf.keras.layers.MaxPooling2D(pool_size=(pool, pool)))\n",
     "        model.add(tf.keras.layers.Dropout(dropout))\n",
     "        model.add(tf.keras.layers.Flatten())\n",
-    "        model.add(tf.keras.layers.Dense(1024, activation='relu'))        \n",
+    "        model.add(tf.keras.layers.Dense(128, activation='relu'))\n",
     "        model.add(tf.keras.layers.Dropout(dropout))\n",
-    "        model.add(tf.keras.layers.Dense(num_classes)) #, activation='softmax'\n",
+    "        model.add(tf.keras.layers.Dense(num_classes, activation='softmax'))\n",
     "\n",
-    "        model.compile(\n",
-    "            loss=tf.keras.losses.SparseCategoricalCrossentropy(from_logits=True),\n",
-    "            optimizer=tf.keras.optimizers.Adam(0.001),\n",
-    "            metrics=['accuracy'],\n",
-    "        )\n",
+    "        opt = tf.keras.optimizers.Adadelta(1.0)\n",
+    "\n",
+    "        model.compile(loss=tf.keras.losses.categorical_crossentropy,\n",
+    "                      optimizer=opt,\n",
+    "                      metrics=['accuracy'])\n",
+    "        \n",
     "        \n",
     "    callbacks = [\n",
-    "        tf.keras.callbacks.TensorBoard(log_dir=model_dir, histogram_freq = 1, profile_batch = '500,520'),\n",
-    "        tf.keras.callbacks.ModelCheckpoint(filepath=model_dir),\n",
+    "        tf.keras.callbacks.TensorBoard(log_dir=log_dir),\n",
+    "        tf.keras.callbacks.ModelCheckpoint(filepath=log_dir),\n",
     "    ]\n",
     "    \n",
-    "    model.fit(input_fn(train_filenames, BATCH_SIZE), \n",
+    "    model.fit(data_input(train_filenames, batch_size), \n",
     "        verbose=0, \n",
     "        epochs=epochs, \n",
     "        steps_per_epoch=steps_per_epoch,\n",
-    "        validation_data=input_fn(validation_filenames, BATCH_SIZE),\n",
+    "        validation_data=data_input(validation_filenames, batch_size),\n",
     "        validation_steps=validation_steps,      \n",
     "        callbacks=callbacks\n",
     "    )\n",
     "    \n",
-    "    score = model.evaluate(input_fn(validation_filenames, BATCH_SIZE), steps=1)\n",
-    "    return {'accuracy': score[1]}    \n",
+    "#    score = model.evaluate(data_input(validation_filenames, batch_size), steps=1)\n",
+    "#    return {'accuracy': score[1]}    \n",
     "\n",
+    "    \n",
     "from hops import experiment\n",
     "experiment.mirrored(mirrored_training)"
    ]
@@ -278,21 +248,18 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "PySpark",
    "language": "python",
-   "name": "python3"
+   "name": "pysparkkernel"
   },
   "language_info": {
    "codemirror_mode": {
-    "name": "ipython",
+    "name": "python",
     "version": 3
    },
-   "file_extension": ".py",
    "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "name": "pyspark",
+   "pygments_lexer": "python3"
   }
  },
  "nbformat": 4,
