--- a/notebooks/ml/Experiment/Tensorflow/mnist.ipynb
+++ b/notebooks/ml/Experiment/Tensorflow/mnist.ipynb
@@ -4,10 +4,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Keras example with h5py model saving\n",
+    "# Tensorflow Keras example with SavedModel model saving\n",
     "---\n",
     "\n",
-    "<font color='red'> <h3>Tested with TensorFlow 1.15.0</h3></font>"
+    "<font color='red'> <h3>Tested with TensorFlow 2.2.0</h3></font>"
    ]
   },
   {
@@ -85,19 +85,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
     "def keras_mnist():\n",
-    "    from tensorflow.python import keras\n",
+    "    from tensorflow import keras\n",
     "    import tensorflow as tf\n",
-    "    from tensorflow.python.keras.datasets import mnist\n",
-    "    from tensorflow.python.keras.models import Sequential\n",
-    "    from tensorflow.python.keras.layers import Dense, Dropout, Flatten\n",
-    "    from tensorflow.python.keras.layers import Conv2D, MaxPooling2D\n",
-    "    from tensorflow.python.keras.callbacks import TensorBoard\n",
-    "    from tensorflow.python.keras import backend as K\n",
+    "    from tensorflow.keras.datasets import mnist\n",
+    "    from tensorflow.keras.models import Sequential\n",
+    "    from tensorflow.keras.layers import Dense, Dropout, Flatten\n",
+    "    from tensorflow.keras.layers import Conv2D, MaxPooling2D\n",
+    "    from tensorflow.keras.callbacks import TensorBoard\n",
+    "    from tensorflow.keras import backend as K\n",
     "\n",
     "    import math\n",
     "    from hops import tensorboard\n",
@@ -157,7 +157,6 @@
     "    tb_callback = TensorBoard(log_dir=tensorboard.logdir(), histogram_freq=0,\n",
     "                             write_graph=True, write_images=True)\n",
     "    callbacks = [tb_callback]\n",
-    "    callbacks.append(keras.callbacks.ModelCheckpoint(tensorboard.logdir() + '/checkpoint-{epoch}.h5'))\n",
     "\n",
     "    model.fit(x_train, y_train,\n",
     "             batch_size=batch_size,\n",
@@ -166,14 +165,38 @@
     "             verbose=1,\n",
     "             validation_data=(x_test, y_test))\n",
     "    score = model.evaluate(x_test, y_test, verbose=0)\n",
+    "\n",
+    "    # Export model as savedModel\n",
+    "    export_path = tensorboard.logdir() + \"/SavedModel\"\n",
+    "\n",
+    "    tf.keras.models.save_model(\n",
+    "        model,\n",
+    "        export_path,\n",
+    "        overwrite=True,\n",
+    "        include_optimizer=True,\n",
+    "        save_format=None,\n",
+    "        signatures=None,\n",
+    "        options=None\n",
+    "    )\n",
+    "    \n",
     "    return {'accuracy': score[1], 'loss': score[0]}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Finished Experiment \n",
+      "\n",
+      "('hdfs://rpc.namenode.service.consul:8020/Projects/demo/Experiments/application_1594231828166_0164_3', {'accuracy': 0.9853000044822693, 'loss': 0.04326099157333374, 'log': 'Experiments/application_1594231828166_0164_3/output.log'})"
+     ]
+    }
+   ],
    "source": [
     "from hops import experiment\n",
     "from hops import hdfs\n",
@@ -191,21 +214,18 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "PySpark",
    "language": "python",
-   "name": "python3"
+   "name": "pysparkkernel"
   },
   "language_info": {
    "codemirror_mode": {
-    "name": "ipython",
+    "name": "python",
     "version": 3
    },
-   "file_extension": ".py",
    "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "name": "pyspark",
+   "pygments_lexer": "python3"
   }
  },
  "nbformat": 4,
