--- a/notebooks/ml/Benchmarks/benchmark.ipynb
+++ b/notebooks/ml/Benchmarks/benchmark.ipynb
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -109,6 +109,8 @@
     "    \n",
     "    num_iterations = 5000 # Number of iterations, increase to run longer\n",
     "    \n",
+    "\n",
+    "    log_dir = tensorboard.logdir()\n",
     "    \n",
     "    # Read synthetic data (can be replaced with real data)\n",
     "    def input_fn():\n",
@@ -129,13 +131,13 @@
     "    with strategy.scope():\n",
     "        model = ResNet50(weights=None, input_shape=(height, width, channels), classes=num_classes)\n",
     "\n",
-    "        optimizer = tf.train.RMSPropOptimizer(0.2)\n",
+    "        optimizer = tf.keras.optimizers.RMSprop(0.2)\n",
     "        model.compile(loss='categorical_crossentropy', optimizer=optimizer)\n",
     "\n",
     "\n",
     "    callbacks = [\n",
-    "        tf.keras.callbacks.TensorBoard(log_dir=model_dir),\n",
-    "        tf.keras.callbacks.ModelCheckpoint(filepath=model_dir),\n",
+    "        tf.keras.callbacks.TensorBoard(log_dir=log_dir),\n",
+    "        tf.keras.callbacks.ModelCheckpoint(filepath=log_dir),\n",
     "    ]\n",
     "    model.fit(input_fn(), \n",
     "        verbose=0,\n",
@@ -150,32 +152,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Finished Experiment \n",
+      "\n",
+      "('hdfs://rpc.namenode.service.consul:8020/Projects/demo/Experiments/application_1594231828166_0163_3', {'metric': None, 'log': 'Experiments/application_1594231828166_0163_3/output.log'})"
+     ]
+    }
+   ],
    "source": [
     "from hops import experiment\n",
     "experiment.launch(wrapper, local_logdir=True)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "PySpark",
    "language": "python",
-   "name": "python3"
+   "name": "pysparkkernel"
   },
   "language_info": {
    "codemirror_mode": {
-    "name": "ipython",
+    "name": "python",
     "version": 3
    },
-   "file_extension": ".py",
    "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "name": "pyspark",
+   "pygments_lexer": "python3"
   }
  },
  "nbformat": 4,
