--- a/notebooks/ml/Distributed_Training/mirrored_strategy/mirroredstrategy_simulated_data_example.ipynb
+++ b/notebooks/ml/Distributed_Training/mirrored_strategy/mirroredstrategy_simulated_data_example.ipynb
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -94,7 +94,7 @@
      "data": {
       "text/html": [
        "<table>\n",
-       "<tr><th>ID</th><th>YARN Application ID</th><th>Kind</th><th>State</th><th>Spark UI</th><th>Driver log</th></tr><tr><td>2</td><td>application_1586507110993_0003</td><td>pyspark</td><td>idle</td><td><a target=\"_blank\" href=\"http://gpu.c.dpe-cloud-mle.internal:8088/proxy/application_1586507110993_0003/\">Link</a></td><td><a target=\"_blank\" href=\"http://gpu.c.dpe-cloud-mle.internal:8042/node/containerlogs/container_e01_1586507110993_0003_01_000001/demo_deep_learning_admin000__meb10000\">Link</a></td></tr></table>"
+       "<tr><th>ID</th><th>YARN Application ID</th><th>Kind</th><th>State</th><th>Spark UI</th><th>Driver log</th></tr><tr><td>69</td><td>application_1594231828166_0156</td><td>pyspark</td><td>idle</td><td><a target=\"_blank\" href=\"http://resourcemanager.service.consul:8088/proxy/application_1594231828166_0156/\">Link</a></td><td><a target=\"_blank\" href=\"http://sn021.dli.zenuity.com:8042/node/containerlogs/container_e08_1594231828166_0156_01_000001/demo__davit000\">Link</a></td></tr></table>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -107,7 +107,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "SparkSession available as 'spark'.\n"
+      "SparkSession available as 'spark'.\n",
+      "Finished Experiment \n",
+      "\n",
+      "('hdfs://rpc.namenode.service.consul:8020/Projects/demo/Experiments/application_1594231828166_0156_1', {'metric': [0.6993436217308044, 0.5029296875], 'log': 'Experiments/application_1594231828166_0156_1/chief_0_output.log'})"
      ]
     }
    ],
@@ -120,13 +123,20 @@
     "    \n",
     "    from hops import tensorboard\n",
     "    from hops import devices\n",
+    "\n",
+    "    model_dir = tensorboard.logdir()\n",
+    "    print('Using %s to store checkpoints.' % model_dir)\n",
     "    \n",
     "    # Define distribution strategy\n",
     "    strategy = tf.distribute.MirroredStrategy()\n",
     "    \n",
+    "    # Define per device batch size\n",
     "    BATCH_SIZE_PER_REPLICA = 32\n",
+    "    \n",
+    "    # Define global batch size\n",
     "    BATCH_SIZE = BATCH_SIZE_PER_REPLICA * strategy.num_replicas_in_sync\n",
     "\n",
+    "    # Define input function\n",
     "    def input_fn():\n",
     "      x = np.random.random((1024, 10))\n",
     "      y = np.random.randint(2, size=(1024, 1))\n",
@@ -136,9 +146,7 @@
     "      dataset = dataset.batch(BATCH_SIZE)\n",
     "      return dataset\n",
     "\n",
-    "    model_dir = tensorboard.logdir()\n",
-    "    print('Using %s to store checkpoints.' % model_dir)\n",
-    "\n",
+    "    # construct model under distribution strategy scope\n",
     "    with strategy.scope():\n",
     "        # Define a Keras Model.\n",
     "        model = tf.keras.Sequential()\n",
@@ -187,21 +195,18 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "PySpark",
    "language": "python",
-   "name": "python3"
+   "name": "pysparkkernel"
   },
   "language_info": {
    "codemirror_mode": {
-    "name": "ipython",
+    "name": "python",
     "version": 3
    },
-   "file_extension": ".py",
    "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "name": "pyspark",
+   "pygments_lexer": "python3"
   }
  },
  "nbformat": 4,
