--- a/notebooks/ml/Distributed_Training/multiworker_mirrored_strategy/multiworkermirroredstrategy_simulated_data_example.ipynb
+++ b/notebooks/ml/Distributed_Training/multiworker_mirrored_strategy/multiworkermirroredstrategy_simulated_data_example.ipynb
@@ -80,16 +80,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Starting Spark application\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<table>\n",
+       "<tr><th>ID</th><th>YARN Application ID</th><th>Kind</th><th>State</th><th>Spark UI</th><th>Driver log</th></tr><tr><td>59</td><td>application_1594231828166_0146</td><td>pyspark</td><td>idle</td><td><a target=\"_blank\" href=\"http://resourcemanager.service.consul:8088/proxy/application_1594231828166_0146/\">Link</a></td><td><a target=\"_blank\" href=\"http://sn021.dli.zenuity.com:8042/node/containerlogs/container_e08_1594231828166_0146_01_000001/demo__davit000\">Link</a></td></tr></table>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "SparkSession available as 'spark'.\n",
       "Finished Experiment \n",
       "\n",
-      "('hdfs://10.0.2.15:8020/Projects/demo_deep_learning_admin000/Experiments/application_1586279424915_0026_2', {'metric': [0.6996641755104065, 0.4375], 'log': 'Experiments/application_1586279424915_0026_2/output.log'})"
+      "('hdfs://rpc.namenode.service.consul:8020/Projects/demo/Experiments/application_1594231828166_0146_1', {'metric': [0.6990288496017456, 0.48828125], 'log': 'Experiments/application_1594231828166_0146_1/chief_0_output.log'})"
      ]
     }
    ],
@@ -104,16 +125,22 @@
     "    from hops import tensorboard\n",
     "    from hops import devices\n",
     "\n",
+    "    model_dir = tensorboard.logdir()\n",
+    "    print('Using %s to store checkpoints.' % model_dir)\n",
     "    \n",
     "    # Define distribution strategy\n",
     "    strategy = tf.distribute.experimental.MultiWorkerMirroredStrategy(communication=tf.distribute.experimental.CollectiveCommunication.NCCL)\n",
+    "\n",
+    "    # Define per device batch size\n",
+    "    batch_size_per_replica = 32\n",
+    "    # Define global batch size    \n",
+    "    batch_size = batch_size_per_replica * strategy.num_replicas_in_sync\n",
     "    \n",
+    "    # Define model hyper parameters\n",
     "    epochs=30 \n",
     "    steps_per_epoch=5\n",
     "    validation_steps=2          \n",
     "    \n",
-    "    batch_size_per_replica = 32\n",
-    "    batch_size = batch_size_per_replica * strategy.num_replicas_in_sync\n",
     "    shuffle_size = batch_size * 4\n",
     "    \n",
     "    def input_fn():\n",
@@ -123,12 +150,10 @@
     "    \n",
     "      dataset = tf.data.Dataset.from_tensor_slices((x, y))\n",
     "      dataset = dataset.repeat(500)\n",
-    "      dataset = dataset.batch(BATCH_SIZE)\n",
+    "      dataset = dataset.batch(batch_size)\n",
     "        \n",
     "      return dataset\n",
     "\n",
-    "    model_dir = tensorboard.logdir()\n",
-    "    print('Using %s to store checkpoints.' % model_dir)\n",
     "\n",
     "    with strategy.scope():\n",
     "        # Define a Keras Model.\n",
@@ -186,21 +211,18 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "PySpark",
    "language": "python",
-   "name": "python3"
+   "name": "pysparkkernel"
   },
   "language_info": {
    "codemirror_mode": {
-    "name": "ipython",
+    "name": "python",
     "version": 3
    },
-   "file_extension": ".py",
    "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "name": "pyspark",
+   "pygments_lexer": "python3"
   }
  },
  "nbformat": 4,
